# VideoLib

./: CMakeLists.txt  README.md
.github/workflows/: build_linux.yml  build_macos.yml  build_win.yml
Qt/Qt-5.15.16/include/QtCore/: qconfig.h
Qt/Qt-5.15.16/include/QtCore/5.15.16/QtCore/private/: qconfig_p.h
Qt/Qt-5.15.16/include/QtGui/: qtgui-config.h
Qt/Qt-5.15.16/include/QtGui/5.15.16/QtGui/private/: qtgui-config_p.h
Qt/Qt-5.15.16/include/QtSql/: qtsql-config.h
Qt/Qt-5.15.16/lib/: Qt5Bootstrap.prl  Qt5Concurrent.lib  Qt5Concurrent.prl  Qt5Concurrentd.lib  Qt5Concurrentd.prl  Qt5Core.lib  Qt5Core.prl  Qt5Cored.lib  Qt5Cored.prl  Qt5DeviceDiscoverySupport.lib  Qt5DeviceDiscoverySupport.prl  Qt5DeviceDiscoverySupportd.lib  Qt5DeviceDiscoverySupportd.prl  Qt5EdidSupport.lib  Qt5EdidSupport.prl  Qt5EdidSupportd.lib  Qt5EdidSupportd.prl  Qt5EventDispatcherSupport.lib  Qt5EventDispatcherSupport.prl  Qt5EventDispatcherSupportd.lib  Qt5EventDispatcherSupportd.prl  Qt5FbSupport.lib  Qt5FbSupport.prl  Qt5FbSupportd.lib  Qt5FbSupportd.prl  Qt5FontDatabaseSupport.lib  Qt5FontDatabaseSupport.prl  Qt5FontDatabaseSupportd.lib  Qt5FontDatabaseSupportd.prl  Qt5Gui.prl  Qt5Guid.prl  Qt5Multimedia.lib  Qt5Multimedia.prl  Qt5MultimediaWidgets.lib  Qt5MultimediaWidgets.prl  Qt5MultimediaWidgetsd.lib  Qt5MultimediaWidgetsd.prl  Qt5Multimediad.lib  Qt5Multimediad.prl  Qt5Network.lib  (+115 more)
Qt/Qt-5.15.16/lib/cmake/Qt5Concurrent/: Qt5ConcurrentConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Core/: Qt5CoreConfig.cmake  Qt5CoreConfigExtras.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5DeviceDiscoverySupport/: Qt5DeviceDiscoverySupportConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5EdidSupport/: Qt5EdidSupportConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5EventDispatcherSupport/: Qt5EventDispatcherSupportConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5FbSupport/: Qt5FbSupportConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5FontDatabaseSupport/: Qt5FontDatabaseSupportConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Gui/: Qt5GuiConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Multimedia/: Qt5MultimediaConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5MultimediaWidgets/: Qt5MultimediaWidgetsConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Network/: Qt5NetworkConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5OpenGL/: Qt5OpenGLConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5OpenGLExtensions/: Qt5OpenGLExtensionsConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5PlatformCompositorSupport/: Qt5PlatformCompositorSupportConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Sql/: Qt5SqlConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Svg/: Qt5SvgConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Test/: Qt5TestConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5ThemeSupport/: Qt5ThemeSupportConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Widgets/: Qt5WidgetsConfig.cmake
Qt/Qt-5.15.16/lib/cmake/Qt5Xml/: Qt5XmlConfig.cmake
Qt/Qt-5.15.16/lib/metatypes/: qt5gui_metatypes.json  qt5guid_metatypes.json  qt5widgets_metatypes.json
Qt/Qt-5.15.16/lib/pkgconfig/: Qt5Concurrent.pc  Qt5Core.pc  Qt5Gui.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5Sql.pc  Qt5Svg.pc  Qt5Test.pc  Qt5Widgets.pc  Qt5Xml.pc
Qt/Qt-5.15.16/mkspecs/: qconfig.pri  qmodule.pri
Qt/Qt-5.15.16/mkspecs/modules/: qt_ext_libjpeg.pri  qt_ext_libpng.pri  qt_lib_core_private.pri  qt_lib_gui.pri  qt_lib_gui_private.pri  qt_lib_multimedia.pri  qt_lib_multimedia_private.pri  qt_lib_network.pri  qt_lib_network_private.pri  qt_lib_sql.pri  qt_lib_svg.pri
include/glad/: gl.h  gl_debug.h
include/libavutil/: ffversion.h
include/libxml/: xmlversion.h
include/mp4decrypt/: decryption_processor.h
include/sdl/: SDL.h  SDL_version.h
lib/: libavdevice.dylib  libavformat.dylib  libavutil.dylib  libcurl-d.dylib  libcurl.dylib  libcurl.exp  libcurl.lib  libcurl_debug.exp  libcurl_debug.lib  libmp4decrypt.dylib  libmp4decrypt_debug.dylib  libpostproc.dylib  libswresample.dylib  libswscale.dylib  libxml2.dylib  libxml2.exp  libxml2.lib  libxml2d.dylib  libxml2d.exp  libxml2d.lib  mp4decrypt.lib  mp4decrypt_debug.lib
src/: main.cpp
